# publish-web-project

./: Cargo.toml  LICENSE  README.MD
src/: cargo_toml.rs  main.rs  pwp_arguments.rs  service_file.rs  ssh.rs
test/test_project/: Cargo.toml
test/test_project/src/: main.rs
