[package]
name = "publish-web-project"
version = "0.0.2"
edition = "2021"

[[bin]]
name = "pwp"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.20", features = ["derive", "help", "usage", "suggestions", "wrap_help", "error-context", "color"] }
progressing = "3.0.2"
ssh2 = "0.9.4"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
toml = "0.8.19"
log = { version = "0.4.22" }
pretty_env_logger = "0.5.0"
shellwords = "1.1.0"