[package]
name = "publish-web-project"
version = "0.0.4"
edition = "2024"

[[bin]]
name = "pwp"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.20", features = ["derive", "help", "usage", "suggestions", "wrap_help", "error-context", "color"] }
ssh2 = "0.9.4"
serde = { version = "1.0.214", features = ["derive"] }
toml = "0.8.19"
log = { version = "0.4.22" }
pretty_env_logger = "0.5.0"
anstyle = "1.0.9"
anyhow = {version = "1.0.97", features = ["backtrace"]}
regex = {version = "1.11.1", features = ["logging", "perf-backtrack"]}